--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
                     <a href="saturn.html">SATURN</a>
             </div>
             
+            <div id="jupiter-orbit">
+                <a href="jupiter.html"><img src="images/jupiter.png" id="jupiter" /></a>
+            </div>    
+            <div id="jupiter-label" class="label-box">
+                    <a href="jupiter.html">JUPITER</a>
+            </div>
+            
             <div id="mars-orbit">
                 <a href="mars.html"><img src="images/mars.png" id="mars" /></a>
             </div>    
